added docker file

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,6 +5,9 @@
     },
     "Container (.NET SDK)": {
       "commandName": "SdkContainer"
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker"
     }
   }
 }
