--- a/.github/workflows/BuildAndDeploy.yaml
+++ b/.github/workflows/BuildAndDeploy.yaml
@@ -20,11 +20,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.x'
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -32,6 +27,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Publish and push the container image
-        run: |
-          dotnet publish --os linux --arch x64 -c Release /p:PublishProfile=github
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.5.0
+        with:
+          push: true
+          tags: ${{ github.repository_owner }}/${{ github.repository }}:latest
