--- a/.github/workflows/BuildAndDeploy.yaml
+++ b/.github/workflows/BuildAndDeploy.yaml
@@ -31,4 +31,4 @@ jobs:
         uses: docker/build-push-action@v6.5.0
         with:
           push: true
-          tags: ${{ github.repository_owner }}/${{ github.repository }}:latest
+          tags: markaplay-game-hosting/discordeventnot:latest
