--- a/.github/workflows/BuildAndDeploy.yaml
+++ b/.github/workflows/BuildAndDeploy.yaml
@@ -23,9 +23,8 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.ORGTOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
           
       - name: Build and push Docker images
         uses: docker/build-push-action@v6.5.0
